# akkuea

./: .gitignore  .toolversions  README.md  bun.lockb  package.json
akkuea-defi-rwa/apps/contracts/contracts/defi-rwa/: Cargo.toml
akkuea-defi-rwa/apps/contracts/contracts/defi-rwa/src/: lib.rs  test.rs
akkuea-defi-rwa/apps/contracts/contracts/defi-rwa/src/access/: admin.rs  mod.rs  roles.rs
akkuea-defi-rwa/apps/contracts/contracts/defi-rwa/src/events/: mod.rs
akkuea-defi-rwa/apps/contracts/contracts/defi-rwa/src/lending/: events.rs  interest.rs  keys.rs  mod.rs  oracle.rs  pool.rs  positions.rs
akkuea-defi-rwa/apps/contracts/contracts/defi-rwa/src/storage/: README.md  STORAGE_OPTIMIZATION.md  keys.rs  mod.rs  property.rs  shares.rs
akkuea-defi-rwa/apps/contracts/contracts/defi-rwa/test_snapshots/test/: test_accrue_interest.1.json  test_accrue_interest_no_time_elapsed.1.json  test_accrue_interest_nonexistent_pool.1.json  test_admin_transfer.1.json  test_borrow_event.1.json  test_create_pool.1.json  test_create_pool_unauthorized.1.json  test_deposit.1.json  test_deposit_emits_event.1.json  test_deposit_event.1.json  test_deposit_multiple_same_pool.1.json  test_deposit_multiple_users.1.json  test_deposit_negative_amount.1.json  test_deposit_nonexistent_pool.1.json  test_deposit_paused_pool.1.json  test_deposit_withdraw_round_trip.1.json  test_get_total_deposits_and_borrows.1.json  test_multiple_pools_isolation.1.json  test_multiple_pools_storage.1.json  test_pause_unpause.1.json  test_property_registered_event.1.json  test_property_registration_event.1.json  (+9 more)
(+488 files in other folders)
