[package]
name = "rwa-defi-contract"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
itoa = "1.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
